F4 Agenda: citas, calendario semana/mes/lista con arrastre, agenda del cliente (v0.4.0)
